todo list styling done

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,22 @@
   -moz-box-shadow: 7px 8px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
+.toDoPaper {
+  background: rgb(226, 226, 226);
+  background: linear-gradient(
+    167deg,
+    rgba(226, 226, 226, 1) 0%,
+    rgba(255, 255, 255, 1) 100%
+  );
+}
+.toDoWrapp {
+  background: rgb(199, 71, 72);
+  background: linear-gradient(
+    167deg,
+    rgba(199, 71, 72, 1) 0%,
+    rgba(255, 115, 116, 1) 100%
+  );
+}
 .toDoListHeader {
   font-family: 'Alkatra', cursive;
 }
@@ -23,4 +39,12 @@
   box-shadow: 3px 3px 0px -1px rgba(239, 236, 236, 1);
   -webkit-box-shadow: 3px 3px 0px -1px rgba(239, 236, 236, 1);
   -moz-box-shadow: 3px 3px 0px -1px rgba(239, 236, 236, 1);
+}
+.scroll::-webkit-scrollbar {
+  width: 0 !important;
+}
+
+.toDoListOverLineColor {
+  -webkit-text-decoration-color: rgba(71, 255, 102, 0.53);
+  text-decoration-color: rgba(71, 255, 102, 0.53);
 }
