--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+  font-family: 'Terminator'; /*Can be any text*/
+  src: local('AirbnbCerealLight'),
+    url('./fonts/TERMINAT.TTF') format('truetype');
+}
+
+* {
+  font-family: 'Terminator';
+}
 
 .boxShaddow {
   box-shadow: 7px 8px 5px 0px rgba(0, 0, 0, 0.75);
@@ -47,4 +56,13 @@
 .toDoListOverLineColor {
   -webkit-text-decoration-color: rgba(71, 255, 102, 0.53);
   text-decoration-color: rgba(71, 255, 102, 0.53);
+}
+
+.ticTacBackground {
+  background: rgb(255, 0, 2);
+  background: linear-gradient(
+    170deg,
+    rgba(255, 0, 2, 1) 0%,
+    rgba(0, 0, 0, 1) 39%
+  );
 }
