--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,10 @@
   -webkit-box-shadow: 4px 9px 17px -6px rgba(0, 0, 0, 0.66);
   -moz-box-shadow: 4px 9px 17px -6px rgba(0, 0, 0, 0.66);
 }
+
+.textShaddow {
+  text-shadow: 0px 1px 3px #000000;
+}
+.zIndexer {
+  z-index: 1000;
+}
